test/testPrint/print7.out
print7.rask:3:13: error: missing closing parenthesis ')'

