test/testPrint/print7.rask
main() -> void
{
    print(5 5;
}

